// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar.agent"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="railFish"
          data-content="965fe321"
          fill="none"
          height="17.6580310880829"
          viewBox="0 0 23.16 17.04"
          width="24"
        />
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="globalActions"
      >
        <button
          aria-label="Open task center"
          class="globalAction"
          type="button"
        >
          <svg
            data-content="f869e73c"
            fill="none"
            height="18"
            viewBox="0 0 14 14"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="Open notification inbox"
          class="globalAction"
          type="button"
        >
          <span
            class="actionIcon"
          >
            <svg
              data-content="926b1223"
              fill="none"
              height="18"
              viewBox="0 0 14 14"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </button>
        <button
          aria-label="Open command palette"
          class="globalAction"
          type="button"
        >
          <svg
            data-content="4ca56c6d"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar.agent"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="951274b9"
          fill="none"
          height="24"
          viewBox="0 0 182 24"
          width="182"
        />
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="globalActions"
      >
        <button
          aria-label="Open task center"
          class="globalAction"
          type="button"
        >
          <svg
            data-content="f869e73c"
            fill="none"
            height="18"
            viewBox="0 0 14 14"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span>
            Task center
          </span>
        </button>
        <button
          aria-label="Open notification inbox"
          class="globalAction"
          type="button"
        >
          <span
            class="actionIcon"
          >
            <svg
              data-content="926b1223"
              fill="none"
              height="18"
              viewBox="0 0 14 14"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
          <span>
            Notifications
          </span>
        </button>
        <button
          aria-label="Open command palette"
          class="globalAction"
          type="button"
        >
          <svg
            data-content="4ca56c6d"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span>
            Commands
          </span>
          <kbd>
            Ctrl K
          </kbd>
        </button>
      </div>
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar.agent"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="951274b9"
          fill="none"
          height="24"
          viewBox="0 0 182 24"
          width="182"
        />
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="globalActions"
      >
        <button
          aria-label="打开任务中心"
          class="globalAction"
          type="button"
        >
          <svg
            data-content="f869e73c"
            fill="none"
            height="18"
            viewBox="0 0 14 14"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span>
            任务中心
          </span>
        </button>
        <button
          aria-label="打开通知收件箱"
          class="globalAction"
          type="button"
        >
          <span
            class="actionIcon"
          >
            <svg
              data-content="926b1223"
              fill="none"
              height="18"
              viewBox="0 0 14 14"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
          <span>
            通知
          </span>
        </button>
        <button
          aria-label="打开命令面板"
          class="globalAction"
          type="button"
        >
          <svg
            data-content="4ca56c6d"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span>
            命令
          </span>
          <kbd>
            Ctrl K
          </kbd>
        </button>
      </div>
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
